--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "expo": "~51.0.14",
+    "expo-image-picker": "~15.0.5",
+    "expo-notifications": "~0.28.9",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
@@ -20,7 +24,7 @@
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-image-picker": "~15.0.5"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
